Disable unnecessary tab focus on unclickable info label.

Test: ash_unittests --gtest_filter=TrayInfoLabelTest*
Bug: 862116
Change-Id: Ifbedc4d656b1e5421f8a2b546d528378e56c6fc6
Reviewed-on: https://chromium-review.googlesource.com/1140019
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576377}
Former-commit-id: 13ca4169102b342e7c514ad5f47c86a555e2f94c